[#86DevUIAlignment][Marcus] fix: make loading circle higher

--- a/src/Component/Style/commonStyle.css
+++ b/src/Component/Style/commonStyle.css
@@ -67,6 +67,6 @@
 }
 
 .loading-cirle {
-  margin-top: 50%;
+  margin-top: 20%;
   color: #6fe0ac !important;
 }
